--- a/Esercizio1.html
+++ b/Esercizio1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <img src="..." class="img-fluid" alt="...">
+    <img src="img/caccia-al-tesoro.jpg" class="img-fluid" alt="Header caccia al tesoro">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
