--- a/index.html
+++ b/index.html
@@ -36,5 +36,26 @@
     </div>
   </div>
 </nav>
+    <div class="container">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+      <form>
+       <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username">
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password">
+      </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+    </div>
+    <div class="col">
+    </div>
+  </div>
+</div>
   </body>
 </html>
