--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <img src="img/caccia-al-tesoro.jpg" class="img-fluid w-100" alt="Header caccia al tesoro">
+    <script src="script/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -51,7 +52,7 @@
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password">
       </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary" onclick="doLogin()">Login</button>
       </form>
     </div>
     <div class="col">
